--- a/dialog.html
+++ b/dialog.html
@@ -48,7 +48,7 @@
         </body>
         <!-- Tableau Extensions API Library  -->
         <!-- library is in the /lib directory -->
-        <script src="../../lib/tableau.extensions.1.latest.js"></script>
+        <script src="./lib/tableau.extensions.1.latest.js"></script>
         <!-- jQuery -->
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
